fix profile container spacing

--- a/src/main/webapp/Styles/profile.css
+++ b/src/main/webapp/Styles/profile.css
@@ -13,7 +13,7 @@
     column-gap: 1cm;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .profile-container h1{
